# mangareader-api

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  main.py  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh  vercel.json
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
app/: constants.py  decorators.py  helpers.py  main.py  schemas.py  utils.py
app/api/: api.py  endpoints.py  utils.py
app/api/api_v1/: constants.py  helpers.py  router.py  schemas.py
app/api/decorators/: return_decorator.py
app/api/helpers/: html_helper.py  string.py
app/api/models/: base_manga.py  base_search.py  most_viewed.py  popular.py  top_ten.py
app/api/scrapers/: base_manga.py  base_search.py  most_viewed.py  popular.py  topten.py
app/api/v1/: constants.py  decorators.py  endpoints.py  helpers.py  models.py  router.py  schemas.py  scraper.py  utils.py
app/shared/: decorators.py  helpers.py  schemas.py
client/: index.html
client/templates/: index.html
docs/: index.html
mangaapi/api/: urls.py  views.py
mangaapi/api/scrapers/: manga.py
mangaapi/api/serializers/: popular_manga.py
mangaapi/core/: settings.py  urls.py
mangareader_api/: main.py
mangareader_api/api/api_v1/: router.py  (+2 more)
providers/: __init__.py
providers/kitsu/: __init__.py  manga.py
providers/mangareader/: __init__.py  manga.py  search.py
providers/myanimelist/: manga.py
scripts/: requirements.sh
server/: api.py  routes.py
server/constants/: endpoints.py
server/decorators/: __init__.py  return_decorator.py  return_on_404_decorator.py  return_on_error.py  return_on_error_decorator.py
server/docs/: __init__.py  data.py  routes.py
server/functions/: url.py
server/helpers/: __init__.py  parser.py  response.py  scraper.py  string.py
server/models/: __init__.py  base_manga.py  base_search.py  featured.py  manga.py  most_viewed.py  popular.py  response.py  search.py  top_ten.py  trending.py
server/providers/: __init__.py  router_v1.py
server/scrapers/: __init__.py  base_manga.py  base_manga_scraper.py  base_scraper.py  base_search.py  manga.py  most_viewed.py  popular.py  router_v1.py  search.py  topten.py
static/css/: main.css
templates/: index.html
(+43 files in other folders)
