[tool.poetry]
name = "mangareader-api"
version = "0.1.0"
description = "A Python-based web scraping API built with FastAPI that provides easy access to manga contents."
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
requests = "^2.32.3"
pydantic-core = "^2.24.1"
anyio = "^4.6.2"
black = "^24.10.0"
pre-commit = "^4.0.1"
jinja2 = "^3.1.4"
markdown = "^3.7"
selectolax = "^0.3.24"
httpx = "^0.27.2"

[tool.poetry.scripts]
dev = "main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
