[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
requests = "^2.32.3"
pydantic-core = "^2.24.2"
pre-commit = "^4.0.1"
selectolax = "^0.3.24"
httpx = "^0.27.2"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
line-length = 92
target-version = ["py36", "py37", "py38"]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "./"
venv = ".venv"
pythonVersion = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
